src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__misc__add_relationship_m2m.snap
---
source: basiliq/src/serve/tests/requests/update/obj/misc.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 403,
    "title": "Ciboulette2PgManyRelationshipDirectWrite",
    "detail": "Directly inserting/updating one-to-many or many-to-many relationships is forbidden"
  }
}
