src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__misc__sorting_remote_multi_rel.snap
---
source: basiliq/src/serve/tests/requests/update/obj/misc.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 403,
    "title": "Ciboulette2PgSortingByMultiRel",
    "detail": "Trying to sort type `public__articles` using its one-to-many relationships to `public__articles`"
  }
}
